[gd_scene load_steps=17 format=2]

[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://App.gd" type="Script" id=2]
[ext_resource path="res://Dial.png" type="Texture" id=3]
[ext_resource path="res://pointer.png" type="Texture" id=4]
[ext_resource path="res://Strange Beeping-SoundBible.com-2088039238.wav" type="AudioStream" id=5]

[sub_resource type="VisualShader" id=1]
graph_offset = Vector2( 0, 111 )
nodes/fragment/0/position = Vector2( 640, 160 )

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/icons/ = null
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="NoiseTexture" id=10]
width = 360
height = 360

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 180, 181 )
texture = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 80.0
one_shot = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 186.217, 201 )
scale = Vector2( 1.21125, 1.21125 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 186.217, 110 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 265, 157 )
rotation = 1.0472
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 263, 246 )
rotation = 2.0944
texture = ExtResource( 4 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 185.783, 290 )
rotation = -3.14159
texture = ExtResource( 4 )

[node name="Sprite9" type="Sprite" parent="."]
position = Vector2( 107.949, 244.812 )
rotation = -2.09439
texture = ExtResource( 4 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 108.166, 154.812 )
rotation = -1.0472
texture = ExtResource( 4 )

[node name="Cicles" type="Label" parent="."]
margin_left = 10.0
margin_top = 340.0
margin_right = 133.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 11 )
text = "CICLES COMPLETED: "

[node name="Start" type="Button" parent="."]
margin_left = 30.0
margin_top = 80.0
margin_right = 106.0
margin_bottom = 112.0
text = "start"

[node name="Stop" type="Button" parent="."]
margin_left = 260.0
margin_top = 80.0
margin_right = 326.0
margin_bottom = 112.0
text = "stop"

[node name="Rest" type="Button" parent="."]
margin_left = 150.0
margin_top = 60.0
margin_right = 226.0
margin_bottom = 92.0
text = "rest"

[node name="Time" type="Label" parent="."]
margin_left = 150.0
margin_top = 20.0
margin_right = 190.0
margin_bottom = 52.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Rest" to="." method="_on_Rest_pressed"]
